--- a/src/app/pages/cards-repeater/CardsRepeaterComponent.css
+++ b/src/app/pages/cards-repeater/CardsRepeaterComponent.css
@@ -6,3 +6,9 @@
     justify-content: space-between;
     padding: 10px;
 }
+
+.cards-repeater_title {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
