Decomposed cards repeater's components and added new and changed function to editing card during repeating

--- a/src/app/pages/cards-editor/CardsEditorComponent.css
+++ b/src/app/pages/cards-editor/CardsEditorComponent.css
@@ -1,10 +1,7 @@
 .cards-editor {
     display: flex;
     flex-direction: column;
-}
-
-.cards-editor_text {
-    margin: 10px !important;
+    margin: 10px;
 }
 
 .cards-editor_button {
